  [Michele Simionato]
  * Fixed a bug with --hc taking the parent site collection instead of
    the child site collection
  * Extended the exposure field mapping functionality to map the same
    input field to multiple columns in the asset collection
  * Removed the experimental aftershock calculator; aftershocks can
    be computed by simply including a file delta_rates.csv

  [Anirudh Rao]
  * Limited the cross-correlation coefficient of GodaAtkinson2009
    to have an upper bound of 1.0

  [Paolo Tormene]
  * Added commands `oq plot mean_hcurves_rtgm,governing_mce,disagg_by_src`

  [Michele Simionato]
  * Raised the limit on the product `num_assets * num_rlzs` when using
    full enumeration by a factor of 10
  * Fixed exporting-reimporting GMFs in hdf5 format
  * Fixed a bug causing the insured losses to be larger than the
    ground losses in some cases
  * Added command `oq info executing`
  * Added `extract/relevant_gmfs?threshold=` functionality
  * Added `extract/ruptures?threshold=` functionality
  * Disabling the DbServer with dbserver.host = local
  * Fixed `disagg_source` for same ID sources
  * Disambiguated same ID sources by appending the file name after
    the exclamation mark and fixed disagg_by_src accordingly
  * Fixed another bug in disaggregation for mutex sources
  * Fixed a bug in `disagg_source` for mutex sources: src_mutex
    was not passed
  * Internal: forced the colon convention on mutex sources
  * Fixed a bug in the disaggregation with mutex sources incorrectly
    averaging over the rates and not the poes

python3-oq-engine (3.18.0-1~xenial01) xenial; urgency=low

  [Michele Simionato]
  * Fixed the command `oq extract ruptures` producing wrong newlines on
    Windows

  [Paolo Tormene, Michele Simionato]
  * Fixed an ordering bug in the tagnames in `extract_agg_curves` breaking
    the QGIS plugin

  [Michele Simionato]
  * Fixed the function `get_mean_stddevs_cy14` to recover the same results